--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,5 +55,10 @@ jobs:
         uses: actions/checkout@v2
       - name: Run migrations
         run: gmake migrateup
+      - name: install migrate pkg to run migrate command on runner machine
+        run: |
+          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.17.0/migrate.darwin-amd64.tar.gz | tar xvz
+          sudo mv migrate /usr/bin
+          which migrate
       - name: Test
         run: gmake test
