gmake to make for migrateup command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,6 @@ jobs:
           sudo mv migrate /usr/bin
           which migrate
       - name: Run migrations
-        run: gmake migrateup
+        run: make migrateup
       - name: Test
         run: gmake test
