--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,8 +57,8 @@ jobs:
         uses: actions/checkout@v2
       - name: install migrate pkg to run migrate command on runner machine
         run: |
-          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.17.0/migrate.darwin-amd64.tar.gz | tar xvz
-          sudo mv migrate /usr/bin
+          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.17.0/migrate.linux-arm64.tar.gz | tar xvz
+          sudo mv migrate.linux-amd64 /usr/bin/migrate
           cd /usr/bin
           chmod 777 migrate
           which migrate
