correction im mig url final6

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,6 @@ jobs:
           chmod 777 migrate
           which migrate
       - name: Run migrations
-        run: make migrateup
+        run: gmake migrateup
       - name: Test
         run: gmake test
